--- a/src/pages/create-user-page/create-user-page.scss
+++ b/src/pages/create-user-page/create-user-page.scss
@@ -1,3 +1,13 @@
 page-create-user-page {
 
 }
+.item.item-trns {
+	border-color: rgba(0, 0, 0, 0);
+	background-color: rgba(0, 0, 0, 0);
+	color: white; 
+}
+
+.home-background {
+  background: url(build/img/zar.png) no-repeat center center fixed;
+  background-size: cover;
+}
